add header meta tag + tuning footer

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -239,6 +239,9 @@ footer {
   &__item {
     margin-bottom: 16px;
   }
+  &__emailContainer{
+    margin-bottom: 16px;
+  }
   &__email {
     padding-left: 25px;
     position: relative;
