--- a/scss/style.scss
+++ b/scss/style.scss
@@ -218,12 +218,18 @@ footer {
 .footerGrid {
   width: auto;
   max-width: 1202px;
-  padding: 0 16px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 16px;
-  padding: 32px;
+  padding: 32px 32px 0 32px;
+}
+
+.footerCopy {
+  text-align: center;
+  padding: 16px 32px 32px;
+  font-size: 14px;
+  color: #b0b0b0;
 }
 
 .footerBox {
